--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss-url": "^8.0.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
+    "vue-model": "^2.0.7",
     "vue-router": "^3.0.1",
     "vue2-highcharts": "^1.2.5",
     "vuex": "^3.0.1"
