--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "dgrid": "^1.2.1",
@@ -24,8 +25,6 @@
     "highcharts-vue": "^1.2.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
-    "postcss-import": "^12.0.0",
-    "postcss-url": "^8.0.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
     "vue-model": "^2.0.7",
