--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "cross-env ENABLE_ESLINT=true node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
-    "lint": "eslint --ext .js,.vue src test/unit/specs"
+    "lint": "eslint --fix --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -18,10 +18,10 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "dgrid": "^1.2.1",
     "dhtmlx-gantt": "^5.2.0",
-    "element-ui": "^2.4.8",
+    "element-ui": "^2.4.9",
     "es6-promise": "^4.2.5",
     "esri-loader": "^2.5.0",
-    "highcharts": "^6.1.4",
+    "highcharts": "^6.2.0",
     "highcharts-vue": "^1.2.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
@@ -46,7 +46,8 @@
     "chai": "^4.2.0",
     "chalk": "^2.4.1",
     "connect-history-api-fallback": "^1.5.0",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.5.4",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
@@ -58,22 +59,22 @@
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
     "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.0",
-    "node-notifier": "^5.1.2",
+    "node-notifier": "^5.3.0",
     "node-sass": "^4.9.4",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
+    "portfinder": "^1.0.19",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
+    "semver": "^5.6.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
