--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "datatables": "^1.10.18",
     "dgrid": "^1.2.1",
     "dhtmlx-gantt": "^5.2.0",
     "element-ui": "^2.4.9",
