--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@arcgis/webpack-plugin": "^4.9.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
