--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --fix --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
