--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "datatables": "^1.10.18",
     "dgrid": "^1.2.1",
-    "dhtmlx-gantt": "^5.2.0",
+    "dhtmlx-gantt": "6.0.0",
     "element-ui": "^2.4.9",
     "es6-promise": "^4.2.5",
     "esri-loader": "^2.5.0",
     "highcharts": "^6.2.0",
     "highcharts-vue": "^1.2.0",
     "jquery": "^3.3.1",
+    "jsdom": "^13.0.0",
     "moment": "^2.22.2",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
